--- a/spring-DB-Oracle-pre/src/main/resources/templates/boardLists.html
+++ b/spring-DB-Oracle-pre/src/main/resources/templates/boardLists.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="EUC-KR">
 <title>boardList</title>
-<link href="../static/NewFile.css"/>
+<link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
 	<h1></h1>
