--- a/spring-DB-Oracle/src/main/resources/templates/index.html
+++ b/spring-DB-Oracle/src/main/resources/templates/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="EUC-KR">
-<title>Homepage</title>
+<title>mainPage</title>
 </head>
 <body>
-
+	<h1>mainPage</h1>
 </body>
 </html>
