--- a/spring-DB-Oracle/src/main/resources/templates/users-infomation.html
+++ b/spring-DB-Oracle/src/main/resources/templates/users-infomation.html
@@ -16,11 +16,11 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="u:${users}">
-				<td:th:text="${u.mno}"></td>
-				<td:th:text="${u.mname}"></td>
-				<td:th:text="${u.memail}"></td>
-				<td:th:text="${u.mbirth}"></td>
+			<tr th:each="u : ${users}">
+				<td th:text="${u.mno}"></td>
+				<td th:text="${u.mname}"></td>
+				<td th:text="${u.memail}"></td>
+				<td th:text="${u.mbirth}"></td>
 			</tr>
 		</tbody>
 		
