--- a/spring-DB-Oracle/src/main/resources/templates/productLists.html
+++ b/spring-DB-Oracle/src/main/resources/templates/productLists.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="EUC-KR">
 <title>productList</title>
+<link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
 	<h1 th:text="${products}"></h1>
