--- a/spring-DB-Oracle/src/main/resources/templates/index.html
+++ b/spring-DB-Oracle/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="EUC-KR">
 <title>mainPage</title>
 </head>
 <body>
 	<h1>mainPage</h1>
-	<a href="register.html"><button>회원가입</button></a>
+	<a th:href="@{register}"><button>회원가입</button></a>
+	<a th:href="@{login}"><button>로그인</button></a>
+	
 </body>
 </html>
