--- a/spring-DB-Oracle/src/main/resources/templates/success.html
+++ b/spring-DB-Oracle/src/main/resources/templates/success.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="EUC-KR">
 <title>회원가입 성공</title>
 </head>
 <body>
 	<h1>회원가입 성공</h1>
+	<a th:href="@{/}"><button>홈페이지로 돌아가기</button></a>
 </body>
 </html>
+
+<!--
+	
+	locahost:8080/
+	기본경로는 /이기 때문에
+	@{/} = locahost:8080/
+	동일한 위치를 가짐
+-->
