--- a/spring-JPA-Board/src/main/resources/templates/board_list.html
+++ b/spring-JPA-Board/src/main/resources/templates/board_list.html
@@ -3,6 +3,16 @@
 <head>
 <meta charset="EUC-KR">
 <title>Board List</title>
+	<script th:inline="javascript">
+		function checkDelete(){
+			var checkdelete = confirm("게시물을 모두 삭제하시겠습니까?");
+			if(checkdelete){
+				window.location.href='/boards/delete/all';
+			}else{
+				alert("게시물 삭제를 취소했습니다.");
+			}
+		}
+	</script>
 </head>
 <body>
 	<h2>Board List</h2>
@@ -30,5 +40,7 @@
 		
 	</table>
 	<a th:href="@{/boards/new}">Add New Board</a>
+	<!--<a th:href="@{/boards/delete/all}">Delete All Board</a>-->
+	<a th:onclick="checkDelete()">Delete All Board</a>
 </body>
 </html>
