--- a/spring-JPA-Board/src/main/resources/templates/board_list.html
+++ b/spring-JPA-Board/src/main/resources/templates/board_list.html
@@ -41,6 +41,6 @@
 	</table>
 	<a th:href="@{/boards/new}">Add New Board</a>
 	<!--<a th:href="@{/boards/delete/all}">Delete All Board</a>-->
-	<a th:onclick="checkDelete()">Delete All Board</a>
+	<a href="#" th:onclick="checkDelete()">Delete All Board</a>
 </body>
 </html>
