--- a/spring-JPA-Cafe/src/main/resources/templates/cafeList.html
+++ b/spring-JPA-Cafe/src/main/resources/templates/cafeList.html
@@ -7,6 +7,11 @@
 <body>
 	<h2>Cafe List</h2>
 	<a th:href="@{/cafes/new}">카페 추가하기</a>
+		<form th:action="@{/cafes}" method="get">
+			<label>Search Cafe:</label>
+			<input type="text" id="search" name="name"/>
+			<button type="submit">Search</button>
+		</form>
 	<table border="1">
 		<thead>
 			<tr>
@@ -24,8 +29,8 @@
 				<td th:text="${cafe.location}"></td>
 				<td th:text="${cafe.openingHours}"></td>
 				<td>
-					<a th:href="@{'/cafes/' + cafe.cafeId}">상세보기</a>
-					<a th:href="@{/cafes/delete/{id}(id=${cafe.cafeId})}">폐업</a>
+					<a th:href="@{'/cafes/' + ${cafe.cafeId}}">상세보기</a>
+					<a th:href="@{'/cafes/delete/'+${cafe.cafeId}}">폐업</a>
 				</td>
 			</tr>
 		</tbody>
