--- a/spring-JPA-Cafe/src/main/resources/templates/cafeList.html
+++ b/spring-JPA-Cafe/src/main/resources/templates/cafeList.html
@@ -29,6 +29,7 @@
 				<td th:text="${cafe.location}"></td>
 				<td th:text="${cafe.openingHours}"></td>
 				<td>
+					<a th:href="@{/cafes/count(location=${cafe.location})}">이 지역의 카페 개수 확인하기</a>
 					<a th:href="@{'/cafes/' + ${cafe.cafeId}}">상세보기</a>
 					<a th:href="@{'/cafes/delete/'+${cafe.cafeId}}">폐업</a>
 				</td>
