--- a/JPA-ImgUpload-Cart-Order/src/main/resources/templates/addItemForm.html
+++ b/JPA-ImgUpload-Cart-Order/src/main/resources/templates/addItemForm.html
@@ -8,6 +8,11 @@
 	<form th:action="@{/new}" method="post" enctype="multipart/form-data"> <!--multipart/form-data 이미지 저장하기 위한 옵션-->
 		<div>
 			<div>
+				<label for="isSoldout">상품상태</label>
+				<input type="radio" name="isSoldout" value="0">판매중 <br>
+				<input type="radio" name="isSoldout" value="1">품절<br>
+			</div>
+			<div>
 				<label for="name">상품이름</label>
 				<input type="text" id="name" name="name" placeholder="상품명을 입력하세요." required>
 				<p>이름은 필수로 작성해주셔야합니다.</p>
@@ -30,6 +35,7 @@
 				<label for="photoFile">상품이미지 업로드</label>
 				<input type="file" id="photoFile" name="photoFile">
 			</div>
+			<button type="submit">상품등록</button>
 		</div>
 	</form>
 
