--- a/JPA-ImgUpload-Cart-Order/src/main/resources/templates/index.html
+++ b/JPA-ImgUpload-Cart-Order/src/main/resources/templates/index.html
@@ -8,11 +8,11 @@
 	<h1>kh 쇼핑몰</h1>
 	<ul>
 		<li><a>home</a></li>
-		<li><a>상품올리기</a></li>
+		<li><a>상품올리기</a></li> <!--상품올리기로 통하는 url-->
 		<li><a>판매자 마이 페이지</a></li>
-		<li><a>제품 상세보기</a>
+		<li><a>제품 상세보기</a> <!--제품 상세보기-->
 			<ul>
-				<li>모든 제품보기</li>
+				<li>모든 제품보기</li> <!--itemList-->
 				<li>인기상품 보기</li>
 				<li>새로운 상품보기</li>
 			</ul>			
