--- a/JPA-imgUploadList/src/main/resources/templates/ItemList.html
+++ b/JPA-imgUploadList/src/main/resources/templates/ItemList.html
@@ -26,6 +26,8 @@
 <body>
 	<h1>상품 리스트</h1>
 	<a th:href="@{/item/new}">상품 추가하기</a>
+	<div class="item-container">
+		<div class="item">
 	<div th:each="item : ${items}">
 		<img th:src="@{${item.getImgPath()}}"><br>
 		<label>제품명: </label>
@@ -37,11 +39,13 @@
 		<a th:href="@{/item/detail/{id}(id=${item.id})}">상세보기</a>
 		
 		<form th:action="@{/cart/add}" method="post">
-			<input type="hidden" name="itemId" th:value="${item.id}"
+			<input type="hidden" name="itemId" th:value="${item.id}">
 			<button type="submit">장바구니에 담기</button> 
 		</form>
-	
 	</div>
+	</div>
+	</div>
+	
 	
 </body>
 </html>
