--- a/JPA-imgUploadList/src/main/resources/templates/addItemForm.html
+++ b/JPA-imgUploadList/src/main/resources/templates/addItemForm.html
@@ -31,6 +31,7 @@
 		<label>상품 이미지 업로드:</label>
 		<input type="file"	name="imgFile" id="imgFile" >
 		<button type="submit">상품 등록</button>
+		<img src="">
 	</form>
 </body>
 </html>
