--- a/JPA-Spring-Security/src/main/resources/templates/login_form.html
+++ b/JPA-Spring-Security/src/main/resources/templates/login_form.html
@@ -5,7 +5,12 @@
 <title>login page</title>
 </head>
 <body>
-	<form th:action="@{/user/login}" method="post">
+	<form th:action="@{/}" method="get">
+		<div th:if="${param.error}">
+	            <div>
+	                사용자ID 또는 비밀번호를 확인해 주세요.
+	            </div>
+	     </div>
 		<div>
 			<label>사용자 ID</label>
 			<input type="text" name="username" id="username">
