--- a/Final-JPA_Shop/src/main/resources/templates/index.html
+++ b/Final-JPA_Shop/src/main/resources/templates/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
 <title>Main Page</title>
 </head>
 <body>
 	<h1>Main Page</h1>
-	<a>로그인</a>
-	<a>로그아웃</a>
-	<a>회원가입</a>
-	<a th:href="@{/product/list}">상품리스트로 이동</a>
+	<div>
+	  <a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
+	  <a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+      <a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
+	    <div th:if="${#authorization.expression('isAuthenticated()')}">
+	    	<p th:text="'안녕하세요, ' + ${#authentication.name} + '님 환영합니다.'"></p>
+	    </div>
+		<a th:href="@{/list}">상품리스트로 이동</a>
+	</div>
 </body>
 </html>
+
+<!--
+	sec:authorize = 작성할 메서드
+	작성할 메서드 리스트
+	1.hasRole("ROLE_ADMIN"): ROLE_ADMIN 권한을 가진 사용자한테만 보이는 컨텐츠 또는 div button
+	2.hasRole("'ROLE_ADMIN', 'ROLE_USER'"): 로그인한 회원과 관리자만 볼 수 있게 하고자 할 경우, 비회원은 못보게함
+	isAuthenticated() 로그인한 사용자한테만 보이는 내용, 만약에 인증이 되지않은 사용자라면 앞에 !를 붙여주면됨
+	isAnonymous() 로그인하지않은 사용자한테만 보이는 내용
+	permitAll(): 모든 사용자에게 접근을 허용하고 내용을 표시
+	denyAll(): 모든 사용자에게 접근을 거부하고 내용을 숨김
+	hasIpAddress('가능한 IP주 소'): 요청이 특정 ip주소에서 온 경우만 내용을 보여줌
+-->
