--- a/Final-JPA_Shop/src/main/resources/templates/product_List.html
+++ b/Final-JPA_Shop/src/main/resources/templates/product_List.html
@@ -24,7 +24,15 @@
 	</head>
 	<body>
 		<h1>productList</h1>
-
+		<div>
+		  <a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
+		  <a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+	      <a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
+		    <div th:if="${#authorization.expression('isAuthenticated()')}">
+		    	<p th:text="'안녕하세요, ' + ${#authentication.name} + '님 환영합니다.'"></p>
+		    </div>
+			<a th:href="@{/product/list}">상품리스트로 이동</a>
+		</div>
 		
 			<a th:href="@{/product/new}">상품추가하기</a>
 	<!-- 1 -->	<div class="product-container" th:each="product, loop : ${paging.content}">
