--- a/Final-JPA_Shop/src/main/resources/templates/product_detail.html
+++ b/Final-JPA_Shop/src/main/resources/templates/product_detail.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	<head>
 	    <meta charset="UTF-8">
 	    <title>View</title>
 	</head>
 	<body>
 	    <h1>View</h1>
+	    <a th:href="@{/product/edit}"></a>
 	    <div th:if="${product.imgName != null and product.imgPath != null}">
 	        <img th:src="@{${product.imgPath}}"/>
 	    </div>
@@ -32,11 +33,11 @@
 	    </div>
 	    
 	    <!-- 댓글 입력 폼 -->
-	    <form>
+	    <form th:action="@{/addComment(productId=${product.id},commentContent=${commentContent})}" method="post">
 	    	<input type="hidden" name="productId" 
 	    							th:value="${product.id}"/>
 	    	<label>댓글 작성</label>
-	    	<input type="text" id="content" name="content">
+	    	<input type="text" id="commentContent" name="commentContent">
 	    	<button type="submit">댓글등록</button>
 	    </form>
 	    
