--- a/Final-JPA_Shop/src/main/resources/templates/product_detail.html
+++ b/Final-JPA_Shop/src/main/resources/templates/product_detail.html
@@ -6,7 +6,20 @@
 	</head>
 	<body>
 	    <h1>View</h1>
-	    <a th:href="@{/product/edit}"></a>
+	    <div>
+		  <a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
+		  <a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+	      <a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
+		    <div th:if="${#authorization.expression('isAuthenticated()')}">
+		    	<p th:text="'안녕하세요, ' + ${#authentication.name} + '님 환영합니다.'"></p>
+		    </div>
+			<a th:href="@{/list}">상품리스트로 이동</a>
+		</div>
+	    <!-- 상품 수정하기 버튼 관리자만 볼 수 있게 해줌 -->
+	    <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/product/edit}">상품수정하기</a>
+		<!-- 2번 째 방법 -->
+		<a th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" 
+			th:href="@{/product/edit}">상품수정하기</a>
 	    <div th:if="${product.imgName != null and product.imgPath != null}">
 	        <img th:src="@{${product.imgPath}}"/>
 	    </div>
