--- a/Final-JPA_Shop/src/main/resources/templates/product_detail.html
+++ b/Final-JPA_Shop/src/main/resources/templates/product_detail.html
@@ -46,7 +46,7 @@
 	    </div>
 	    
 	    <!-- 댓글 입력 폼 -->
-	    <form th:action="@{/addComment(productId=${product.id},commentContent=${commentContent})}" method="post">
+	    <form th:action="@{/addComment}" method="post">
 	    	<input type="hidden" name="productId" 
 	    							th:value="${product.id}"/>
 	    	<label>댓글 작성</label>
